# trpg-bot

./: .gitignore  LICENSE  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
tests/: test_trpg_bot.py
trpg_bot/: Player.py  Procfile  trpg_bot.py  usage.md
trpg_bot/logic/: CommandInterpreterLogic.py  DiceListLogic.py  DiceLogic.py  DropboxLogic.py  ModeSelectorLogic.py  __init__.py
trpg_bot/mode/: CthulhuMode.py  DefaultMode.py  MayokinMode.py  __init__.py
trpg_bot/mode/args/: DiceArgs.py  FunctionalDiceArgs.py  __init__.py
trpg_bot/player/: AbstractPlayer.py  CthulhuPlayer.py  MayokinPlayer.py  __init__.py
trpg_bot/resources/: usage_cthulhu.md  usage_default.md  usage_mayokin.md
