[tool.poetry]
name = "trpg-bot"
version = "0.1.0"
description = ""
authors = ["k-seta <swordh16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git", extras = ["voice"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
