[tool.poetry]
name = "trpg-bot"
version = "0.1.0"
description = ""
authors = ["k-seta <swordh16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git"}
redis = "^3.4.1"
prettytable = "^0.7.2"
requests = "^2.23.0"
beautifulsoup4 = "^4.9.0"
dropbox = "^10.1.2"
gitpython = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
